--- a/connect_four/index.html
+++ b/connect_four/index.html
@@ -14,6 +14,10 @@
     ></script>
   </head>
   <body>
+    <div id="title">
+      <h1>Connect Four</h1>
+    </div>
+      <div id="container"></div>
     <script src="app.js"></script>
   </body>
 </html>
