--- a/connect_four/index.html
+++ b/connect_four/index.html
@@ -18,6 +18,7 @@
       <h1>Connect Four</h1>
     </div>
       <div id="container"></div>
+      <button id="reset">Reset Game</button>
     <script src="app.js"></script>
   </body>
 </html>
