--- a/connect_four/index.html
+++ b/connect_four/index.html
@@ -17,8 +17,11 @@
     <div id="title">
       <h1>Connect Four</h1>
     </div>
-      <div id="container"></div>
-      <button id="reset">Reset Game</button>
+    <div id="modal">
+      <div id="modal-textbox"></div>
+    </div>
+    <div id="container"></div>
+    <button id="reset">Reset Game</button>
     <script src="app.js"></script>
   </body>
 </html>
