--- a/connect_four/index.html
+++ b/connect_four/index.html
@@ -22,6 +22,6 @@
     </div>
     <div id="container"></div>
     <button id="reset">Reset Game</button>
-    <script src="app.js"></script>
+    <script type="text/javascript" src="app.js"></script>
   </body>
 </html>
