centered container contents and added some styles

--- a/connect_four/index.html
+++ b/connect_four/index.html
@@ -21,7 +21,10 @@
       <div id="modal-textbox"></div>
     </div>
     <div id="container"></div>
-    <button id="reset">Reset Game</button>
+    <br>
+    <div id="reset">
+      <button id="reset">Reset Game</button>
+    </div>
     <script type="text/javascript" src="app.js"></script>
   </body>
 </html>
