square is showing color on click

--- a/connect_four/index.html
+++ b/connect_four/index.html
@@ -23,7 +23,7 @@
     <div id="container"></div>
     <br>
     <div id="reset">
-      <button id="reset">Reset Game</button>
+      <a href="index.html">Reset</a>
     </div>
     <script type="text/javascript" src="app.js"></script>
   </body>
