fixed xy position

--- a/connect_four/index.html
+++ b/connect_four/index.html
@@ -17,10 +17,8 @@
     <div id="title">
       <h1>Connect Four</h1>
     </div>
-    <div id="score">
-        <h3 class="yellow-score">Yellow Score:</h3>
-        <h3 class="blue-score">Blue score:</h3>
-    </div>
+    <div id="msg"></div>
+    <div id="score"></div>
     <div id="modal">
       <div id="modal-textbox"></div>
     </div>
