adjusted modal boxes

--- a/connect_four/index.html
+++ b/connect_four/index.html
@@ -18,12 +18,14 @@
       <h1>Connect Four</h1>
     </div>
     <div id="msg"></div>
-    <div id="score"></div>
     <div id="modal">
       <div id="modal-textbox"></div>
+      <div id="play-again">
+        <a href="index.html">Play Again!</a>
+      </div>
     </div>
     <div id="container"></div>
-    <br>
+    <br />
     <div id="reset">
       <a href="index.html">Reset</a>
     </div>
