added animista styles

--- a/connect_four/index.html
+++ b/connect_four/index.html
@@ -15,9 +15,11 @@
   </head>
   <body>
     <div id="title">
-      <h1>Connect Four</h1>
+      <h1 class="pulsate-fwd">Connect Four</h1>
     </div>
-    <div id="msg"></div>
+    <div id="msg">
+      <h2 id="msg-text" class="wobble-hor-top"></h2>
+    </div>
     <div id="modal">
       <div id="modal-textbox"></div>
       <div id="play-again">
